ci: sonarqube settings

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,12 +1,5 @@
-sonar.projectKey=storage-app-br_schedeasy-simple-api
-sonar.organization=storage-app-br
+sonar.projectKey=schedeasy-simple-api
 
-sonar.sources=src
-sonar.exclusuions=**/migrations/**,**/*.spec.ts,**/*int-spec.ts,**/*e2e-spec.ts
-sonar.tests=src
-sonar.test.inclusions=**/*.spec.ts,**/*int-spec.ts,**/*e2e-spec.ts
-
-sonar.typescript.lcov.reportPaths=coverage/lcov.info
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=schedeasy-simple-api
 #sonar.projectVersion=1.0
@@ -17,3 +10,10 @@ sonar.typescript.lcov.reportPaths=coverage/lcov.info
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+
+sonar.sources=src
+sonar.exclusuions=**/migrations/**,**/*.spec.ts,**/*int-spec.ts,**/*e2e-spec.ts
+sonar.tests=src, tests
+sonar.test.inclusions=**/*.spec.ts,**/*int-spec.ts,**/*e2e-spec.ts
+
+sonar.typescript.lcov.reportPaths=coverage/lcov.info
