ci: test sonar cloud

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,5 @@
-sonar.projectKey=schedeasy-simple-api
-
+sonar.projectKey=storage-app-br_schedeasy-simple-api
+sonar.organization=storage-app-br
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=schedeasy-simple-api
 #sonar.projectVersion=1.0
@@ -11,9 +11,9 @@ sonar.projectKey=schedeasy-simple-api
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
 
-sonar.sources=src
+sonar.sources=src, test
 sonar.exclusuions=**/migrations/**,**/*.spec.ts,**/*int-spec.ts,**/*e2e-spec.ts
-sonar.tests=src, tests
-sonar.test.inclusions=**/*.spec.ts,**/*int-spec.ts,**/*e2e-spec.ts
+sonar.tests=src, test
+sonar.test.inclusions=**/*.spec.ts,**/*int-spec.ts,**/*e2e-spec.ts,**/*test.ts
 
 sonar.typescript.lcov.reportPaths=coverage/lcov.info
