ci: test sonarcloud branch develop

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,11 +7,11 @@ name: CI - sonar cloud
 
 on:
   push:
-    branches: ['main']
+    branches: ['develop']
     # Publish semver tags as releases.
     tags: ['v*.*.*']
-  # pull_request:
-  #   branches: ['main']
+  pull_request:
+    branches: ['main']
 
 env:
   # Use docker.io for Docker Hub if empty
