--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,71 +11,71 @@ env:
   FOLDER_NAME: ${{ github.event.repository.name }}-app
 
 jobs:
-  run-ci:
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-      packages: write
-      id-token: write
+  # run-ci:
+  #   runs-on: ubuntu-latest
+  #   permissions:
+  #     contents: write
+  #     packages: write
+  #     id-token: write
 
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
+  #   steps:
+  #     - name: Checkout repository
+  #       uses: actions/checkout@v4
+  #       with:
+  #         fetch-depth: 0
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        with:
-          install: true
-          driver: docker-container  # 🔥 Usa driver compatível com cache
-          driver-opts: network=host
+  #     - name: Set up Docker Buildx
+  #       uses: docker/setup-buildx-action@v3
+  #       with:
+  #         install: true
+  #         driver: docker-container  # 🔥 Usa driver compatível com cache
+  #         driver-opts: network=host
 
-      - name: Build development
-        id: build-and-push
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: false
-          tags: ${{ env.FOLDER_NAME }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
-          load: true
-          file: Dockerfile
-          target: development
+  #     - name: Build development
+  #       id: build-and-push
+  #       uses: docker/build-push-action@v5
+  #       with:
+  #         context: .
+  #         push: false
+  #         tags: ${{ env.FOLDER_NAME }}
+  #         cache-from: type=gha
+  #         cache-to: type=gha,mode=max
+  #         load: true
+  #         file: Dockerfile
+  #         target: development
 
-      - name: up containers
-        run: docker compose -f docker-compose.ci.yml up -d
+  #     - name: up containers
+  #       run: docker compose -f docker-compose.ci.yml up -d
 
-      - name: Wait for PostgreSQL to be ready
-        run: |
-          echo "Waiting for PostgreSQL to start..."
-          for i in {1..30}; do
-            if docker compose -f docker-compose.ci.yml exec -T db pg_isready --host=localhost --username=pguser --dbname=permissao; then
-              echo "PostgreSQL is ready!"
-              exit 0
-            fi
-            echo "PostgreSQL not ready yet. Retrying in 2 seconds..."
-            sleep 2
-          done
-          echo "PostgreSQL did not start in time."
-          exit 1
+  #     - name: Wait for PostgreSQL to be ready
+  #       run: |
+  #         echo "Waiting for PostgreSQL to start..."
+  #         for i in {1..30}; do
+  #           if docker compose -f docker-compose.ci.yml exec -T db pg_isready --host=localhost --username=pguser --dbname=permissao; then
+  #             echo "PostgreSQL is ready!"
+  #             exit 0
+  #           fi
+  #           echo "PostgreSQL not ready yet. Retrying in 2 seconds..."
+  #           sleep 2
+  #         done
+  #         echo "PostgreSQL did not start in time."
+  #         exit 1
 
-      - name: generate envs
-        run: |
-          docker compose -f docker-compose.ci.yml exec -u root -T app cp ./envs/.env.test.example ./envs/.env.test
-          docker compose -f docker-compose.ci.yml exec -u root -T app cp ./envs/.env.e2e.example ./envs/.env.e2e
+  #     - name: generate envs
+  #       run: |
+  #         docker compose -f docker-compose.ci.yml exec -u root -T app cp ./envs/.env.test.example ./envs/.env.test
+  #         docker compose -f docker-compose.ci.yml exec -u root -T app cp ./envs/.env.e2e.example ./envs/.env.e2e
 
-      - name: run unit and integration tests
-        run: docker compose -f docker-compose.ci.yml run -T app yarn test:cov
+  #     - name: run unit and integration tests
+  #       run: docker compose -f docker-compose.ci.yml run -T app yarn test:cov
       
-      - uses: SonarSource/sonarqube-scan-action@v4
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+  #     - uses: SonarSource/sonarqube-scan-action@v4
+  #       env:
+  #         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
   run-cd:
     runs-on: ubuntu-latest
-    needs: run-ci  # Só executa SE os testes passarem
+    # needs: run-ci  # Só executa SE os testes passarem
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
