--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -80,18 +80,18 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Log in to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+      # - name: Log in to Docker Hub
+      #   uses: docker/login-action@v3
+      #   with:
+      #     username: ${{ secrets.DOCKER_USERNAME }}
+      #     password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Build and Push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ${{ env.IMAGE_NAME }}:latest,${{ env.IMAGE_NAME }}:${{ github.sha }}
+      # - name: Build and Push Docker image
+      #   uses: docker/build-push-action@v5
+      #   with:
+      #     context: .
+      #     push: true
+      #     tags: ${{ env.IMAGE_NAME }}:latest,${{ env.IMAGE_NAME }}:${{ github.sha }}
 
       - name: Setup Kustomize
         uses: imranismail/setup-kustomize@v1
@@ -105,16 +105,16 @@ jobs:
           cd k8s
           kustomize edit set image node-api=$DOCKER_USERNAME/schedeasy-simple-api:$GITHUB_SHA
 
-      - name: Setup Git Signing
+      - name: Configure GPG Signing
         run: |
-          git config --local user.email "action@github.com"  # Email da chave GPG
-          git config --local user.name "GitHub Action"
-          git config --local commit.gpgSign true
-          git config --local gpg.program gpg
-          git config --local user.signingkey ${{ secrets.GPG_PRIVATE_KEY_ID }}
           echo "${{ secrets.GPG_PRIVATE_KEY }}" | gpg --batch --import
+          git config --global gpg.program gpg
+          git config --global user.signingkey $(gpg --list-secret-keys --keyid-format=long | grep sec | awk '{print $2}' | cut -d'/' -f2)
+          git config --global commit.gpgSign true
           echo "allow-loopback-pinentry" >> ~/.gnupg/gpg-agent.conf
           echo "use-agent" >> ~/.gnupg/gpg.conf
+          echo "pinentry-mode loopback" >> ~/.gnupg/gpg.conf
+          gpgconf --kill gpg-agent
           gpgconf --reload gpg-agent
 
       - name: Commit changes
