fix: cd: test run only commit changes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,22 +107,23 @@ jobs:
 
       - name: Configure GPG Signing
         run: |
+          mkdir -p ~/.gnupg
+          chmod 700 ~/.gnupg
           echo "${{ secrets.GPG_PRIVATE_KEY }}" | gpg --batch --import
           git config --global gpg.program gpg
           git config --global user.signingkey $(gpg --list-secret-keys --keyid-format=long | grep sec | awk '{print $2}' | cut -d'/' -f2)
           git config --global commit.gpgSign true
           echo "allow-loopback-pinentry" >> ~/.gnupg/gpg-agent.conf
-          echo "use-agent" >> ~/.gnupg/gpg.conf
           echo "pinentry-mode loopback" >> ~/.gnupg/gpg.conf
           gpgconf --kill gpg-agent
           gpgconf --reload gpg-agent
 
-      - name: Commit changes
+      - name: Commit Changes
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add .
-          git commit -S -m "Bump docker version"
+          git config --global user.email "action@github.com"
+          git config --global user.name "GitHub Action"
+          echo "${{ secrets.GPG_PASSPHRASE }}" | gpg --batch --passphrase-fd 0 --pinentry-mode loopback --sign
+          git -c gpg.program=gpg commit -S -am "Bump docker version"
 
       - name: Push changes
         uses: ad-m/github-push-action@master
