--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -105,25 +105,27 @@ jobs:
           cd k8s
           kustomize edit set image node-api=$DOCKER_USERNAME/schedeasy-simple-api:$GITHUB_SHA
 
-      - name: Configure GPG Signing
+      - name: Configure GPG
         run: |
           mkdir -p ~/.gnupg
           chmod 700 ~/.gnupg
           echo "${{ secrets.GPG_PRIVATE_KEY }}" | gpg --batch --import
-          git config --global gpg.program gpg
-          git config --global user.signingkey $(gpg --list-secret-keys --keyid-format=long | grep sec | awk '{print $2}' | cut -d'/' -f2)
-          git config --global commit.gpgSign true
           echo "allow-loopback-pinentry" >> ~/.gnupg/gpg-agent.conf
           echo "pinentry-mode loopback" >> ~/.gnupg/gpg.conf
           gpgconf --kill gpg-agent
           gpgconf --reload gpg-agent
+          git config --global gpg.program gpg
+          git config --global user.signingkey $(gpg --list-secret-keys --keyid-format=long | grep sec | awk '{print $2}' | cut -d'/' -f2)
+          git config --global commit.gpgSign true
+
 
       - name: Commit Changes
         run: |
           git config --global user.email "action@github.com"
           git config --global user.name "GitHub Action"
+          git add .
           echo "${{ secrets.GPG_PASSPHRASE }}" | gpg --batch --passphrase-fd 0 --pinentry-mode loopback --sign
-          git -c gpg.program=gpg commit -S -am "Bump docker version"
+          git commit -S -m "Bump docker version"
 
       - name: Push changes
         uses: ad-m/github-push-action@master
