--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -115,13 +115,13 @@ jobs:
           git_commit_gpgsign: true  # Assina todos os commits automaticamente
           git_tag_gpgsign: true  # Assina todas as tags automaticamente
           git_push_gpgsign: true  # Assina todos os pushes automaticamente
-          git_committer_name: "github-actions[bot]"  # Nome do committer
-          git_committer_email: "github-actions[bot]@users.noreply.github.com"
+          git_committer_name: "igorlage"  # Nome do committer
+          git_committer_email: "igor-rl@hotmail.com"
 
       - name: Commit changes
         run: |
           git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
+          git config --global user.email "igor-rl@hotmail.com"
           git add .
           git commit -m "Bump docker version"
 
