fix: cd: test run only commit changes

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -120,7 +120,7 @@ jobs:
 
       - name: Commit changes
         run: |
-          git config --global user.name "github-actions[bot]"
+          git config --global user.name "igorlage"
           git config --global user.email "igor-rl@hotmail.com"
           git add .
           git commit -m "Bump docker version"
