--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -127,7 +127,9 @@ jobs:
           git add .
           git commit -m "Bump docker version"  # Realiza o commit com assinatura GPG
 
-      - name: Push changes using GITHUB_TOKEN
-        run: |
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/storage-app-br/schedeasy-simple-api.git
-          git push origin developer  # Push para a branch "developer" ou qualquer outra desejada
+      - name: Push
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.ACTIONS_TOKEN_ACCESS }}
+          repository: storage-app-br/schedeasy-simple-api
+          branch: develop
