--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -118,9 +118,12 @@ jobs:
           git_committer_name: "igorlage"  # Nome do committer
           git_committer_email: "igor-rl@hotmail.com"
 
-      - name: Commit and push changes
+      - name: Commit changes
         run: |
           git config --global user.name "igorlage"
           git config --global user.email "igor-rl@hotmail.com"
           git commit -am "Bump docker version"
-          git push origin develop
+
+      - name: Push changes
+        run: |
+          git push https://github-actions[bot]:${{ secrets.ACTIONS_TOKEN_ACCESS }}@github.com/${{ github.repository }}.git HEAD:develop
