--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -126,4 +126,4 @@ jobs:
 
       - name: Push changes
         run: |
-          git push https://igorlage:${{ secrets.ACTIONS_TOKEN_ACCESS }}@github.com/${{ github.repository }}.git HEAD:develop
+          git push https://igorlage:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:develop
