--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -124,6 +124,9 @@ jobs:
           git config --global user.email "igor-rl@hotmail.com"
           git commit -am "Bump docker version"
 
-      - name: Push changes
-        run: |
-          git push https://github-actions[bot]:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git HEAD:develop
+      - name: Push
+        uses: ad-m/github-push-action@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          repository: ${{ github.repository }}
+          branch: ${{ github.ref }}
