ci-cd: full test

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         uses: docker/setup-buildx-action@v3
         with:
           install: true
-          driver: docker-container  # 🔥 Usa driver compatível com cache
+          driver: docker-container
           driver-opts: network=host
 
       - name: Build development
@@ -69,7 +69,8 @@ jobs:
       - name: run unit and integration tests
         run: docker compose -f docker-compose.ci.yml run -T app yarn test:cov
       
-      - uses: SonarSource/sonarqube-scan-action@v4
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v5
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
 
