--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -118,3 +118,15 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           repository: ${{ github.repository }}
           branch: ${{ github.ref }}
+
+  create-pr:
+    runs-on: ubuntu-latest
+    needs: run-cd  # Executa após o 'run-cd'
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Create Pull Request
+        run: |
+          # Use GitHub CLI to create a PR from develop to main
+          gh pr create --base main --head develop --title "Auto PR from Develop to Main" --body "This PR was created automatically after the CI pipeline." --label "auto-pr"
