--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -129,4 +129,4 @@ jobs:
         uses: diillson/auto-pull-request@v1.0.1
         with:
           destination_branch: "main"
-          github_token: ${{ secrets.CUSTOM_GH_TOKEN }}
+          github_token: ${{ secrets.GITHUB_TOKEN }}
