--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -123,6 +123,9 @@ jobs:
   pull-request:
     runs-on: ubuntu-latest
     needs: run-cd
+    permissions:
+      contents: write  # Permissão para modificar o conteúdo do repositório
+      pull-requests: write  # Permissão para criar pull requests
     steps:
       - uses: actions/checkout@v3
       - name: pull-request
